2021-07-18 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Stop parsing function after minimum number of arguments under the same conditions as after maximum number of arguments, when there are no more argument and parentheses are not used (e.g. log 64 / log 2 = log(64)/log(2))
	* Stop parsing function that only takes one argument at argument separator, if parentheses are not used

2021-07-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Change "assumptions" abbreviation to "asm"
	* Set both type and sign if assumptions are set to "none" or zero, and set type to number for "complex"
	* Convert Celsius to Fahrenheit if no calculation was performed

2021-07-14 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix handling of OR and AND in multisolve()

2021-07-07 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix segfault after failure to convert approximate unit (e.g. cal_fifteen)

2021-07-04 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add support for "a perm b" (= perm(a,b)), "a comb b" (= comb(a,b)), "a dot b" (= "a.b"), "a cross b" (= cross(a,b)), and Unicode cross product symbol
	* Add Calculator::getGlobalFunction(), Calculator::getGlobalUnit(), and Calculator::getGlobalVariable(), for more efficient retrieval of objects

2021-07-03 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Avoid use of right-to-left Unicode symbols (do not present the currency symbols for IRR and AFN to the user)
	* Do not try to load data objects from global definitions dir if data set is local

2021-07-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix norm() and magnitude()
	* Add a second argument, p, to norm()
	* Output abs(x) as |x|

2021-06-30 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Add support for "^^" as XOR operator
	* always check for "user" directory (regardless of compile time options), on Windows
	* Output both original and factorized integer, in qalc
	* Improved HTML output

2021-06-25 Hanna Knutsson <hanna.knutsson@protonmail.com>
