@@ -32,7 +32,7 @@
 
 #define QALCULATE_MAJOR_VERSION (3)
 #define QALCULATE_MINOR_VERSION (20)
-#define QALCULATE_MICRO_VERSION (0)
+#define QALCULATE_MICRO_VERSION (1)
 
 static std::string empty_string;
 
